--- a/src/styling/header.css
+++ b/src/styling/header.css
@@ -27,3 +27,8 @@ header {
     cursor: pointer;
     color: var(--cream);
 }
+
+.header_Title :hover {
+    cursor: pointer;
+    color: var(--cream);
+}
