made footer stay at the bottom of the page

--- a/src/styling/footer.css
+++ b/src/styling/footer.css
@@ -1,4 +1,9 @@
 footer {
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
+    
     background-color: var(--daerkPurple);
     color: var(--gold);
 
