added background video. autoplay not working

--- a/src/styling/hero.css
+++ b/src/styling/hero.css
@@ -1,14 +1,22 @@
 .hero {
     color: var(--gold);
+    background-color: black;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    position: relative;
 }
 
 .hero_logo {
     width: 25%;
     padding: var(--mediumPadding);
+    position: relative;
+}
+
+.hero_subtitle {
+    position: relative;
 }
 
 .hero_intro {
@@ -17,19 +25,50 @@
     
     width: 40%;
     padding: var(--smallPadding);
+    position: relative;
 }
 
 .hero_niwiMotto {
     display: inline;
+    position: relative;
 }
 
 .hero_continue {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .hero_learnMore {
     padding-top: var(--mediumPadding);
-    padding-bottom: var(--smallPadding);
+    position: relative;
+}
+
+.hero_downArrow {
+    padding-top: var(--smallPadding);
+    padding-bottom: var(--largePadding);
+}
+
+
+/* Video */
+.videoContainer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.3;
+    }
+
+iframe {
+    /* optional */
+    width: 100%;
+    height: 100vh;
 }
