style: styled hero. Autoplay still not working

--- a/src/styling/footer.css
+++ b/src/styling/footer.css
@@ -4,7 +4,7 @@ footer {
     bottom:0;
     right:0;
     
-    background-color: var(--daerkPurple);
+    background-color: var(--darkPurple);
     color: var(--gold);
 
     text-align: center;
