--- a/src/styling/header.css
+++ b/src/styling/header.css
@@ -1,5 +1,5 @@
 header {
-    background-color: var(--daerkPurple);
+    background-color: var(--darkPurple);
     color: var(--gold);
 
     display: flex;
