--- a/src/styling/settings.css
+++ b/src/styling/settings.css
@@ -1,7 +1,7 @@
 :root {
     /* Colours */
     --mediumPurple: #8A3385;
-    --daerkPurple: #220044;
+    --darkPurple: #220044;
     --lightPurple: #A160A4;
     --gold: #EFAF2E;
     --cream: #FAE7CF;
