--- a/src/styling/footer.css
+++ b/src/styling/footer.css
@@ -1,9 +1,8 @@
 footer {
-    position:absolute;
-    left:0;
+    position: relative;
     bottom:0;
-    right:0;
-    
+    width:100%;
+
     background-color: var(--darkPurple);
     color: var(--gold);
 
