--- a/src/styling/footer.css
+++ b/src/styling/footer.css
@@ -1,7 +1,8 @@
 footer {
     position: relative;
     bottom:0;
-    width:100%;
+    left:0;
+    right:0;
 
     background-color: var(--darkPurple);
     color: var(--gold);
