--- a/src/styling/hero.css
+++ b/src/styling/hero.css
@@ -44,6 +44,8 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+
+    padding-top: var(--largePadding);
 }
 
 .hero_learnMore {
