--- a/src/styling/typography.css
+++ b/src/styling/typography.css
@@ -35,11 +35,11 @@ h1, h2, h3 {
     font-family: 'Arvo', serif;
 }
 
-h1:hover, h2:hover, h3:hover, p:hover {
+h1:hover, h2:hover, h3:hover, p:hover, a:hover {
     font-family: 'Aurebesh', serif;
 }
 
-h1, p {
+h1, p, a {
     font-size: var(--normal);
 }
 
@@ -52,6 +52,6 @@ h3 {
 }
 
 
-p {
+p, a {
     font-family: 'Raleway', sans-serif;
 }
