added styling to squadrons menu

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
 @import "./styling/hero.css";
 @import "./styling/homeMenu.css";
 
+/* Squadrons */
+@import "./styling/squadronsMenu.css";
+
 
 
 body {
