--- a/src/styling/typography.css
+++ b/src/styling/typography.css
@@ -39,7 +39,7 @@ h1:hover, h2:hover, h3:hover, p:hover, a:hover {
     font-family: 'Aurebesh', serif;
 }
 
-h1, p, a {
+h1, p, a, li {
     font-size: var(--normal);
 }
 
@@ -52,6 +52,6 @@ h3 {
 }
 
 
-p, a {
+p, a, li {
     font-family: 'Raleway', sans-serif;
 }
