styled squad components

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 @import "./styling/homeMenu.css";
 
 /* Squadrons */
+@import "./styling/squadInfo.css";
 @import "./styling/squadronsMenu.css";
 
 
