--- a/src/styling/typography.css
+++ b/src/styling/typography.css
@@ -35,7 +35,7 @@ h1, h2, h3 {
     font-family: 'Arvo', serif;
 }
 
-h1:hover, h2:hover, h3:hover, p:hover, a:hover {
+h1:hover, h2:hover, h3:hover, p:hover, a:hover, li:hover {
     font-family: 'Aurebesh', serif;
 }
 
