minor padding change to titles

--- a/src/styling/media.css
+++ b/src/styling/media.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     justify-content: center;
     margin: auto;
-
 }
 
 .media_buttons {
@@ -41,6 +40,6 @@
 
 .media_titles {
     color: var(--gold);
-    margin: var(--mediumPadding);
+    margin: var(--mediumPadding) 0 var(--smallPadding) 0;
     text-align: center;
 }
