fixed h1 link styling

--- a/src/styling/header.css
+++ b/src/styling/header.css
@@ -27,3 +27,8 @@ header {
     cursor: pointer;
     color: var(--cream);
 }
+
+.header_Title {
+    text-decoration: none;
+    color: var(--gold);
+}
