--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,15 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+
     position:absolute;
-    width: 100%
+    width: 100%;
+
 }
+
+.App {
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 10rem;
+}
+
