--- a/src/styling/media.css
+++ b/src/styling/media.css
@@ -24,10 +24,21 @@
 }
 
 .media_display {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     width: 100%;
-    height: 17rem;
-    margin: var(--smallPadding) 0;
-    border-radius: 5px;
+    height: 100%;
+    border-radius: 3px;
+}
+
+.media_video {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
 }
 
 .media_imageDisplay {
