hide menu at given 670px width

--- a/src/styling/header.css
+++ b/src/styling/header.css
@@ -32,3 +32,12 @@ header {
     text-decoration: none;
     color: var(--gold);
 }
+
+
+/* REACTIVENESS */
+
+@media screen and (max-width: 670px) {
+    .nav_links {
+        display: none;
+    }
+}
