--- a/src/styling/homeMenu.css
+++ b/src/styling/homeMenu.css
@@ -3,13 +3,10 @@
     margin: var(--smallPadding) auto;
     width: 50%;
     position: relative;
-
-    
 }
 
 /* Card Component */
 .menu_card {
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,18 +42,20 @@
     box-sizing: border-box;
 }
 
-.card_content:hover, .card_Label { 
+.card_content:hover, .card_Label {
+    /* Make it visible when hovered */
     opacity: 1;
-    /* hover */
 }
 
 .card_Label {
+    /* Animation for visibility */
     opacity: 1;
     transition-delay: 0s;
     transition-duration: 0.4s;
 }
 
 .menu_card .card_content .card_label {
+    /* Center text */
     padding-top: 25%;
 }
 
@@ -73,6 +72,7 @@
         width: 70%;
     }
 
+    /* make label visibile */
     .card_content {
         opacity: 1;
     }
