--- a/src/styling/squadInfo.css
+++ b/src/styling/squadInfo.css
@@ -7,6 +7,7 @@
 .description {
     background-color: var(--darkPurple);
     width: 40%;
+    min-width: 500px;
     border-radius: 10px;
 
     margin: var(--mediumPadding) auto;
@@ -31,4 +32,12 @@
     padding-top: var(--smallPadding);
     line-height: 2;
     margin-bottom: var(--hugePadding);
+}
+
+/* REACTIVENESS */
+@media screen and (max-width: 720px) {
+    .description {
+        width: 90%;
+        min-width: 300px;
+    }
 }
