--- a/src/styling/media.css
+++ b/src/styling/media.css
@@ -54,3 +54,27 @@
     margin: var(--mediumPadding) 0 var(--smallPadding) 0;
     text-align: center;
 }
+
+/* REACTIVENESS */
+@media screen and (max-width: 1000px) {
+    .media_container {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .media_container {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .media_container {
+        width: 70%;
+    }
+
+    .media_button {
+        width: 5rem;
+        padding: auto 0;
+    }
+}
