--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,13 @@ body {
 .App {
     min-height: 100%;
     position: relative;
-    padding-bottom: 10rem;
+    padding-bottom: 14rem;
+}
+
+/* REACTIVENESS */
+@media screen and (max-width: 770px) {
+    .App {
+        padding-bottom: 19rem;
+    }
 }
 
