--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,18 @@ body {
     }
 }
 
+
+/* Safari reactiveness */
+@media not all and (min-resolution:.001dpcm) { @media {
+
+    .App { 
+        padding-bottom: 30rem;
+    }
+
+    @media screen and (max-width: 770px) {
+        .App {
+            padding-bottom: 33rem;
+        }
+    }
+}}
+
