--- a/src/styling/hero.css
+++ b/src/styling/hero.css
@@ -7,6 +7,9 @@
     align-items: center;
 
     position: relative;
+    box-sizing: border-box !important;
+
+    height: 100vh;
 }
 
 .hero_logo {
@@ -45,7 +48,7 @@
     align-items: center;
     position: relative;
 
-    padding-top: var(--largePadding);
+    /* padding-top: var(--largePadding); */
 }
 
 .hero_learnMore {
