added transition to hover on squad description

--- a/src/styling/squadInfo.css
+++ b/src/styling/squadInfo.css
@@ -28,6 +28,14 @@
     padding: var(--smallPadding);
     padding-bottom: 5rem;
     line-height: 2;
+
+    transition-property: font-size;
+    transition-duration: 1s;
+    /* transition-delay: 0s; */
+}
+
+.description_body:hover {
+    font-size: 0.76rem;
 }
 
 .roster_players {
@@ -36,6 +44,7 @@
     padding-top: var(--smallPadding);
     line-height: 2;
     margin-bottom: var(--hugePadding);
+
 }
 
 /* REACTIVENESS */
